test/ill-formed/0071_pointer_member_in_struct_array_param.c
typedef struct {
  int *x;
  double y;
} s;
void f (s a[static const restrict 5]) {}
